crates/libs/frieze/tests/ui/option_vec_of_option.rs
use frieze::Schema;

#[derive(Schema)]
struct S {
    x: Option<Vec<Option<String>>>,
}

fn main() {}
